--- a/app/globals.css
+++ b/app/globals.css
@@ -24,31 +24,53 @@ body {
   color: #232536;
 }
 
-.desc, .desc2, .label, h1, h2, h3, h4, h5, h6, .generalButton {
+.desc,
+.desc2,
+.label,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.generalButton {
   font-family: var(--font-sen);
-  
+
   /* color: #232536; */
 }
 
+.generalButton:hover {
+  background-color: #f0c44c;
+}
 
-.desc {
-  font-weight: 500;
-  font-size: 16px;
+.gray-p1 {
+  color: #c7c8ca;
+}
+
+.desc1 {
+  font-family:  sans-serif;
+  font-weight: 200;
+  font-size: 15px;
   line-height: 28px;
 }
 
+.desc span {
+  font-weight: bold;
+}
+
+
 .desc2 {
-  font-weight: regular;
-  font-size: 14px;
-  line-height: 20px;
+  font-family:  sans-serif;
+  font-weight: 200;
+  font-size: 15px;
+  line-height: 28px;
 }
 
 p {
-  font-family: var(--font-sen);
-  font-weight: 500;
-  /* color: #6d6e76; */
-  font-size: 14px;
-  line-height: 20px;
+  font-family:  sans-serif;
+  letter-spacing: 0px;
+  font-weight: 100;
+  color: #7d7d82;
 }
 
 h1 {
@@ -65,6 +87,7 @@ h2 {
 }
 
 h3 {
+  color: #232536;
   font-weight: bold;
   font-size: 28px;
   line-height: 36px;
@@ -72,7 +95,7 @@ h3 {
 
 h4 {
   font-weight: bold;
-  font-size: 24px;
+  font-size: 28px;
   line-height: 32px;
 }
 
@@ -141,5 +164,5 @@ body {
 .whyWeStartedRight {
   margin-top: 19vh;
   margin-left: -27vw;
-  padding:5vw 4vw;
+  padding: 5vw 4vw;
 }
